<resources>
    <string name="app_name">Universal</string>
    <string name="twitter_api_consumer_key">ISQO95rit7uostwAuxSpg</string>
    <string name="twitter_api_consumer_secret_key">vVCIV6ATubiZ1NwQcge9ehPMLWk5cCWTR93jo9FCVPU</string>
    <string name="google_maps_key">AIzaSyAwa4e9O3Cq2kUlNZLYMJsBeVVO9AxO2Ls</string>
    <string name="pinterest_access_token">Ao-BuwwQmtzuiQj1An8i6bQDZR0iFZeWot5HagtDi_0seMAr2AVyQDAAAFDyRNWIp8RgPa4AAAAA</string>
    <string name="soundcloud_id">b6699250e974837de717cf1e0ca5ca4a</string>
    <string name="soundcloud_secret">ffd51b7af360c8d1e650801e83fff2a8</string>
    <string name="flickr_key">c1f63725521d955d0ceed11a7430f0b8</string>
    <string name="tumblr_key">XddydOnUISsEsmj0iZNFUv0KMd42G89e2x2EqXbw2q1ymLIE6s</string>
    <string name="vimeo_access_token">1d66b35d141e481dc3a7df7c04f0982d</string>
    <string name="woocommerce_consumer_key">ck_5b847444b446414e440e9509e294a15bc4431b36</string>
    <string name="woocommerce_consumer_secret">cs_77c96fedefbb15a769c54aaac597250aa3246d7e</string>
    <string name="woocommerce_url">https://sherdle.com/apphosting/universal/woocommerce</string>
    <string name="onesignal_app_id">ef5ccdb5-de67-4a6e-971f-96acf02b46bb</string>
    <string name="onesignal_google_project_number">AIzaSyClxGo9MdELBT87E-_13pk4KHZ4saPToSE</string>
    <string name="privacy_policy_url">http://sherdle.com/help/</string>
    <string name="about_text"><![CDATA[<b>Version 1.0</b> <br><br>Thank you for downloading our app<br><br> <i>By MyCompany&#174;</i>]]></string>
    <string name="google_play_license"></string>
    <string name="product_id"></string>
    <string name="admob_banner_id"></string>
    <string name="admob_interstitial_id"></string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="privacy_policy_header">Data Protection Consent</string>
    <string name="privacy_policy_summary"><![CDATA[We care about your privacy and data security. When you use this app, you consent to the use of cookies and third party services in accordance with the terms of our <a href="%1$s">privacy policy</a>.]]></string>
    <string name="privacy_policy_agreement">By clicking \'I agree\', you confirm that you are over the age of 16 and that we may collect your data for the purposes described in the privacy policy.</string>
    <string name="privacy_policy_agree_button">I agree</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="message">Message</string>
    <string name="tweet_share_header">\'s tweet</string>
    <string name="ok">Ok</string>
    <string name="feed_title_value">Feed title</string>
    <string name="feed_link_value">Feed description</string>
    <string name="feed_description_value">Feed link</string>
    <string name="btn_video">Play video</string>
    <string name="btn_audio">Play audio</string>
    <string name="video_no_live_title">On a break</string>
    <string name="video_no_live">No live streams available now</string>
    <string name="video_live">Select a stream</string>
    <string name="play_button">Play</string>
    <string name="video_share_begin">"I just saw this video: "</string>
    <string name="video_share_middle">" in the \""</string>
    <string name="video_share_end">\" app</string>
    <string name="video_subtitle_start">"Uploaded "</string>
    <string name="video_subtitle_end">" by "</string>
    <string name="webview_title">Web</string>
    <string name="retry">Retry</string>
    <string name="notification_error_ssl_cert_invalid">The SSL Certificate of the server could not be verified. Would you like to continue?</string>
    <string name="web_share_begin">"Look what I saw in the \""</string>
    <string name="web_share_end">"\" app: "</string>
    <string name="item_del_text">You are about to delete all your favorites</string>
    <string name="item_del_confirmation">I know</string>
    <string name="no_favorites">You can add favorites by opening an item and selecting \"favorite\"</string>
    <string name="favorite_success">The item has been added</string>
    <string name="favorite_duplicate">This item has already been added</string>
    <string name="favorite_menu_delete">Delete</string>
    <string name="settings_general_summary">Username and password information</string>
    <string name="settings_general">General</string>
    <string name="settings_showmenu_summary">Yes/No</string>
    <string name="settings_showmenu">Show side menu on start</string>
    <string name="settings_fontsize_summary">Preferred text size for articles and posts</string>
    <string name="settings_fontsize">Text size</string>
    <string name="settings_fontsize_xl">Extra Large</string>
    <string name="settings_fontsize_l">Large</string>
    <string name="settings_fontsize_m">Default</string>
    <string name="settings_fontsize_s">Small</string>
    <string name="settings_fontsize_xs">Extra Small</string>
    <string name="settings_other_summary">Other information</string>
    <string name="settings_other">Other</string>
    <string name="settings_aboutus_summary">Information about our application</string>
    <string name="settings_aboutus">About</string>
    <string name="settings_notifications_summary">Manage notification settings</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_licenses_summary">Licence details for open-source software</string>
    <string name="settings_licenses">Open-source licenses</string>
    <string name="settings_rate_summary">Help other users enjoy this application</string>
    <string name="settings_rate">Rate this app</string>
    <string name="settings_version">Version</string>
    <string name="settings_billing_summary">Manage your In-App purchases</string>
    <string name="settings_billing">In-App Products.</string>
    <string name="settings_purchase_summary">Removes ads and unlocks more content</string>
    <string name="settings_purchase">Unlock extra features</string>
    <string name="settings_restore_purchase_success">Previous purchases have been restored.</string>
    <string name="settings_purchase_fail">Purchase failed.</string>
    <string name="settings_purchase_success">Purchase succeeded.</string>
    <string name="settings_purchase_pending">"Purchase is Pending. Please complete Transaction</string>
    <string name="dialog_purchase_title">Content locked.</string>
    <string name="dialog_purchase">In order to view this content, you need to unlock the full version by making a one time purchase.\n\nThis will also remove advertisements throughout the app.</string>
    <string name="wordpress_subtitle_start">"Published "</string>
    <string name="wordpress_subtitle_end">" by "</string>
    <string name="related">Related to this</string>
    <string name="volume_low">Turn your volume up!</string>
    <string name="now_playing">Now playing</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="notification_playing">Playing audio - Live Stream</string>
    <string name="audio_notification">Background media playback</string>
    <string name="error_retry">Failed to connect to stream... </string>
    <string name="error_retry_later">Please try again in a few seconds... </string>
    <string name="radio_playing_other">Already playing another station. Press play again to play this station instead.</string>
    <string name="pin_default_message">Pin</string>
    <string name="image_descr">Image</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="tumblr_share_begin">Check out this post I saw in</string>
    <string name="saved">Saved at:</string>
    <string name="set_confirm">Are you sure you would like to set this image as wallpaper?</string>
    <string name="set_success">You have set a new Wallpaper!</string>
    <string name="duration">%1$d:%2$02d</string>
    <string name="toast_track_added">Added to the playlist. Touch again to play now.</string>
    <string name="playback_view_time">%1$02d:%2$02d</string>
    <string name="play_all">Play all</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart_success">Added to cart</string>
    <string name="order_success">Thank you for your order!</string>
    <string name="order_success_subtitle">We have received your order!</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="in_stock">In stock</string>
    <string name="view_cart">View cart</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="cart_failed">We were unable to checkout your items..</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="latest_products">Latest Products</string>
    <string name="min_price">Minimum price</string>
    <string name="max_price">Maximum price</string>
    <string name="order_by">Sorting</string>
    <string name="order_date">Newest</string>
    <string name="order_popularity">Most popular</string>
    <string name="order_price">Cheapest</string>
    <string name="order_rating">Best rated</string>
    <string name="tag">Tag</string>
    <string name="weight">Weight</string>
    <string name="sku">SKU</string>
    <string name="id">Id</string>
    <string name="filter">Filter</string>
    <string name="tax_notice">Tax included</string>
    <string name="dimensions">Dimensions</string>
    <string name="reviews">(%d)</string>
    <string name="reviews_description">%d people reviewed this product.</string>
    <string name="all_reviews">All reviews</string>
    <string name="no_reviews">(0)</string>
    <string name="rating">Rating %d out of 5</string>
    <string name="order_items">#%d (%d Items)</string>
    <string name="order_item">#%d (%s)</string>
    <string name="no_user">Who are you?</string>
    <string name="category_size">%d products</string>
    <string name="service">Enjoy Free Returns. Up to 2 Years of Warranty. Fast Customer Support. Safe Shopping and Checkout</string>
    <string name="no_user_subtitle">Login with your store account to view your orders.</string>
    <string name="no_order">You have no existing orders. Any orders you make while signed in will show up here.</string>
    <string name="shop">Shop</string>
    <string name="greeting">Hi %1s!</string>
    <string name="sale">Sale</string>
    <string name="featured">Featured</string>
    <string name="quantity">%2d pcs</string>
    <string name="quantity_picker">Select quantity</string>
    <string name="cart_empty_title">Your cart is empty</string>
    <string name="cart_empty_subtitle">Start shopping to fill your cart with items</string>
    <string name="review">Reviews</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="varations">Options</string>
    <string name="varations_select">Please select your options</string>
    <string name="varations_unavailable">This combination is not available</string>
    <string name="varations_missing">Something went wrong with loading product variations</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="empty_textview">Error loading data</string>
    <string name="no_results">No results</string>
</resources>