<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/min_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_price"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency_max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/max_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_price"
            android:inputType="number" />
    </LinearLayout>

    <CheckBox android:id="@+id/checkbox_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/sale" />

    <CheckBox android:id="@+id/checkbox_featured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured" />

    <CheckBox android:id="@+id/checkbox_instock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_stock" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_by"
            android:layout_marginRight="@dimen/spacing_l"
            android:layout_marginEnd="@dimen/spacing_l"/>

        <Spinner
            android:id="@+id/order_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/category"
            android:id="@+id/category_label"
            android:layout_marginRight="@dimen/spacing_l"
            android:layout_marginEnd="@dimen/spacing_l"/>

        <LinearLayout
            android:id="@+id/chip_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/chip_background"
            android:layout_marginLeft="@dimen/spacing_xs"
            android:layout_marginRight="@dimen/spacing_xs"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_darker"
                android:layout_marginRight="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_m"
                android:textSize="@dimen/textsize_s"
                android:text="@string/no_results" />

            <TextView
                android:id="@+id/category_chip_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:paddingStart="@dimen/spacing_m"
                android:paddingLeft="@dimen/spacing_m"
                android:background="@drawable/chip_background_dark"
                android:textSize="@dimen/textsize_xs"
                android:text="X " />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>