<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_check_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_actionbar">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/finished_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cart_empty_subtitle"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/order_success"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="@dimen/textsize_xxl" />

        <TextView
            android:id="@+id/cart_empty_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/spacing_m"
            android:gravity="center"
            android:text="@string/order_success_subtitle"
            android:textColor="@color/dark_gray" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_empty_subtitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#000"
            android:elevation="5dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/ok"
            android:textColor="#fff" />
    </RelativeLayout>

    <include
        android:visibility="visible"
        layout="@layout/fragment_wc_loading"/>

</RelativeLayout>
